--- a/style.css
+++ b/style.css
@@ -1,235 +1,337 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Karla', cursive;
+}
 
-*{padding: 0; margin: 0; box-sizing: border-box; font-family: 'Karla', cursive;}
+section {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
 
-section{width: 100%; height: 100vh; display: flex; justify-content: center; flex-direction: column; align-items: center; background: #2f2d2d}
+section h1 {
+  text-shadow: 2px 5px 5px #2f3542;
+  word-spacing: 10px;
+  margin-bottom: 15px;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: white;
+}
 
-section h1{ text-shadow: 2px 5px 5px #2f3542; word-spacing: 10px; margin-bottom: 15px; 
- font-size:2.5rem; text-transform: uppercase; letter-spacing: 2px; color: white;}
-.centerDiv{ width: 60%; height: 450px; box-shadow:2px 2px 2px 5px white;  display: flex;  
-flex-direction: column;  align-items: center; justify-content: center; background: #57606f; color: white;}
+.centerDiv {
+  width: 60%;
+  height: 450px;
+  box-shadow: 2px 2px 2px 5px white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #ffc800;
+  color: rgb(0, 0, 0);
+}
 
 
 
-.details{ text-align: center; text-transform: uppercase; }
+.details {
+  text-align: center;
+  text-transform: uppercase;
+}
 
-.details label{font-size: 1.4rem;}
-.details input { padding: 10px; background-color: #555; color: white; text-align: center;}
+.details label {
+  font-size: 1.4rem;
+}
+
+.details input {
+  padding: 10px;
+  background-color: rgb(240, 240, 240);
+  color: rgb(100, 99, 99);
+  text-align: center;
+}
+
 .details input[type=text]:focus {
   border: 3px solid #555;
 }
 
-.imgdiv {margin: 30px 0;}
+.imgdiv {
+  margin: 30px 0;
+}
 
 button {
-  background: #000000;
+  background: #ff6c03;
   width: 180px;
   padding: 4px 0;
-  border-radius: 3px;
-  color:white;
+  border-radius: 7px;
+  color: white;
   font-size: 1.2rem;
   letter-spacing: 2px;
-    background-color: darken(#f1c40f, 20%);
-   }
+  background-color: darken(#f1c40f, 20%);
+}
 
 
-  button:hover {
-    cursor: pointer;
-  }
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+button:hover {
+  cursor: pointer;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .navbar {
-    background-color: black;
-    color: #d8d8d8;
-    border-bottom: 0.5px solid gray;
-    width: 100%;
-    line-height: 80px;
-    height: 80px;
-    font-size: 18px;
-    padding: 0 30px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-family: 'Karla';
+  background-color: rgb(255, 255, 255);
+  color: #d8d8d8;
+  border-bottom: 0.5px solid gray;
+  width: 100%;
+  line-height: 80px;
+  height: 80px;
+  font-size: 18px;
+  padding: 0 30px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-family: 'Karla';
 }
 
 .navbar a {
-    text-decoration: none;
-    color: #d8d8d8;
+  text-decoration: none;
+  color: #000000;
 }
 
 .logo {
-    float: left;
-    height: inherit;
-    line-height: inherit;
-    padding: 0 30px;
-    font-size: 40px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-family: 'Karla';
-    color: #d8d8d8;
-    font-weight: bold;
+  float: left;
+  height: inherit;
+  line-height: inherit;
+  padding: 0 30px;
+  font-size: 40px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-family: 'Karla';
+  color: #d8d8d8;
+  font-weight: bold;
 }
 
 nav {
-    flex: 1;
-    text-align: right;
+  flex: 1;
+  text-align: right;
 }
 
 nav ul {
-    display: inline-block;
-    list-style-type: none;
+  display: inline-block;
+  list-style-type: none;
 }
 
 nav ul li {
-    display: inline-block;
-    margin-right: 20px;
+  display: inline-block;
+  margin-right: 20px;
 }
 
 a {
-    text-decoration: none;
-    color: #d8d8d8;
+  text-decoration: none;
+  color: #d8d8d8;
 }
 
 p {
-    color: #d8d8d8
+  color: #d8d8d8
 }
 
 .navbar ul li a:hover {
-    background-color: gray;
+  background-color: gray;
 }
 
 .navbar ul {
-    float: right;
-    list-style: none;
-    height: inherit;
-    line-height: inherit;
-    padding: 0 50px;
+  float: right;
+  list-style: none;
+  height: inherit;
+  line-height: inherit;
+  padding: 0 50px;
 }
 
 .navbar ul li {
-    display: inline-block;
+  display: inline-block;
 }
 
 .navbar ul li a {
-    display: block;
-    text-align: center;
-    min-width: 120px;
-    padding: 0 30px;
+  display: block;
+  text-align: center;
+  min-width: 120px;
+  padding: 0 30px;
 }
 
 .row {
-    font-family: 'Karla';
-    color: #d8d8d8;
-    margin-top: 20%;
-    text-align: center;
+  font-family: 'Karla';
+  color: #d8d8d8;
+  margin-top: 20%;
+  text-align: center;
 }
 
 .col-2 {
-    padding-top: 25px;
+  padding-top: 25px;
 }
 
 body {
-    background-color: black;
-    color: #d8d8d8;
+  background-color: rgb(255, 149, 0);
+  color: #1a1a1a;
 }
 
 h1 {
-    font-family: 'Karla';
-    font-size: 70px;
+  font-family: 'Karla';
+  font-size: 70px;
 }
 
 .meme-generator img {
-    height: 430px;
-    object-fit: cover;
-  }
-  
-  .meme-generator .generate-meme-btn {
-    padding: 8px 20px;
-    border: none;
-    border-left: 4px solid #222;
-    border-right: 4px solid #222;
-    margin: 24px 0;
-    font-size: 20px;
-    color: #fff;
-    background: #000000;
-    cursor: pointer;
-    transition: all 400ms ease;
-  }
-  
-  .meme-generator .generate-meme-btn:hover {
-    padding: 8px 36px;
-    border-left: 8px solid #222;
-    border-right: 8px solid #222;
-    letter-spacing: 3px;
-  }
-  
-  .meme-generator .meme-author {
-    margin: 8px;
+  height: 430px;
+  object-fit: cover;
+}
+
+.meme-generator .generate-meme-btn {
+  padding: 8px 20px;
+  border: none;
+  border-left: 4px solid #222;
+  border-right: 4px solid #222;
+  margin: 24px 0;
+  font-size: 20px;
+  color: rgb(32, 32, 32);
+  background: #ffffff;
+  cursor: pointer;
+  transition: all 400ms ease;
+}
+
+.meme-generator .generate-meme-btn:hover {
+  padding: 8px 36px;
+  border-left: 8px solid #222;
+  border-right: 8px solid #222;
+  letter-spacing: 3px;
+}
+
+.meme-generator .meme-author {
+  margin: 8px;
+}
+
+.meme-generator {
+  color: #1a1a1a;
+  text-align: center;
+}
+
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: sans-serif;
+}
+
+.app {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 25px;
+}
+
+.header {
+  text-align: center;
+  padding: 20px 0;
+}
+
+.header h1 {
+  margin: 0 0 10px 0;
+}
+
+.header select {
+  font-size: 1rem;
+}
+
+.slideshow {
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+  opacity: 0;
+  transform: scale(1);
+  transition: all .9s ease-out;
+}
+
+.slide:nth-last-child(2) {
+  opacity: 1;
+  transform: scale(1.08);
+}
+
+
+
+html {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+.bg {
+  animation: slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, rgb(255, 140, 0) 50%, rgb(255, 242, 0) 50%);
+  bottom: 0;
+  left: -50%;
+  opacity: .5;
+  position: fixed;
+  right: -50%;
+  top: 0;
+  z-index: -1;
+}
+
+.bg2 {
+  animation-direction: alternate-reverse;
+  animation-duration: 4s;
+}
+
+.bg3 {
+  animation-duration: 5s;
+}
+
+.content {
+  background-color: rgba(255, 255, 255, .8);
+  border-radius: .25em;
+  box-shadow: 0 0 .25em rgba(0, 0, 0, .25);
+  box-sizing: border-box;
+  left: 50%;
+  padding: 10vmin;
+  position: fixed;
+  text-align: center;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  font-family: monospace;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-25%);
   }
 
-  .meme-generator {
-    color: #d8d8d8;
-    text-align: center;
+  100% {
+    transform: translateX(25%);
   }
-
-
-  html, body {
-    height: 100%;
-  }
-  
-  body {
-    margin: 0;
-    font-family: sans-serif;
-  }
-  
-  .app {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
-    margin-bottom: 25px;
-  }
-  
-  .header {
-    text-align: center;
-    padding: 20px 0;
-  }
-  
-  .header h1 {
-    margin: 0 0 10px 0;
-  }
-  
-  .header select {
-    font-size: 1rem;
-  }
-  
-  .slideshow {
-    flex: 1;
-    position: relative;
-    overflow: hidden;
-    text-align: center;
-  }
-  
-  .slide {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center center;
-    opacity: 0;
-    transform: scale(1);
-    transition: all .9s ease-out;
-  }
-  
-  .slide:nth-last-child(2) {
-    opacity: 1;
-    transform: scale(1.08);
-  }
+}
