--- a/style.css
+++ b/style.css
@@ -50,14 +50,20 @@ section h1 {
 .details input {
   padding: 10px;
   background-color: rgb(240, 240, 240);
-  color: rgb(100, 99, 99);
+  color: rgb(37, 37, 37);
   text-align: center;
+  font-family:'Roboto';
 }
 
 .details input[type=text]:focus {
   border: 3px solid #555;
 }
-
+.details select{
+  border: 2px solid #555;
+  font-family: 'Roboto';
+  display: inline-block;
+  padding: 8px;
+}
 .imgdiv {
   margin: 30px 0;
 }
@@ -78,6 +84,12 @@ button:hover {
   cursor: pointer;
 }
 
+.breed select{
+  border: 2px solid #555;
+  font-family: 'Roboto';
+  display: inline-block;
+  padding: 8px;
+}
 * {
   margin: 0;
   padding: 0;
@@ -91,7 +103,7 @@ button:hover {
   width: 100%;
   line-height: 80px;
   height: 80px;
-  font-size: 18px;
+  font-size: 20px;
   padding: 0 30px;
   position: absolute;
   top: 0;
@@ -257,6 +269,7 @@ body {
   position: relative;
   overflow: hidden;
   text-align: center;
+  font-family: 'Roboto';
 }
 
 .slide {
