--- a/style.css
+++ b/style.css
@@ -4,6 +4,26 @@
   box-sizing: border-box;
 }
 
+.content_new {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  color: #F8FFDB;
+}
+
+.content_new h1 {
+  font-size: 70px;
+  margin-top: 80px;
+}
+
+.content_new h2 {
+  margin: 20px auto;
+  font-weight: 100;
+  line-height: 25px;
+}
+
 .navbar {
   background-color: rgb(255, 255, 255);
   color: #d8d8d8;
@@ -67,7 +87,7 @@ nav ul li a {
 
 nav ul li a:hover {
   color: #ffd000;
-  transition: all 0.2s ease;
+  transition: all 0.4s ease;
 }
 
 @media screen and (max-width: 1020px) {
@@ -75,7 +95,7 @@ nav ul li a:hover {
     padding: 0;
   }
 
-  .col-2 h1 {
+  .content_new h1 {
     font-size: 50px;
     text-align: center center;
   }
@@ -315,17 +335,6 @@ button:hover {
   background-color: #F8FFDB;
 }
 
-.row {
-  font-family: 'Karla', cursive;
-  color: #F8FFDB;
-  margin-top: 20%;
-  text-align: center;
-}
-
-.col-2 {
-  padding-top: 25px;
-}
-
 body {
   background-color: rgb(255, 149, 0);
   color: #1a1a1a;
@@ -490,7 +499,7 @@ h1 {
   font-family: monospace;
 }
 
-.transperant{
+.transperant {
   color: transparent;
 }
 
