--- a/style.css
+++ b/style.css
@@ -29,9 +29,7 @@
 
 .content_new h2 {
   font-size: 40px;
-  margin: 20px auto;
   font-weight: 100;
-  line-height: 25px;
 }
 
 .navbar {
@@ -40,9 +38,10 @@
   border-bottom: 0.5px solid gray;
   width: 100%;
   line-height: 80px;
+  display: block;
   height: 80px;
   font-size: 20px;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   text-align: center;
@@ -254,8 +253,8 @@ nav ul li a:hover {
 }
 
 section {
-  width: 100%;
-  height: 100vh;
+   width: 100%;
+  /* height: 100vh; */
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -270,6 +269,25 @@ section h1 {
   text-transform: uppercase;
   letter-spacing: 2px;
   color: #F8FFDB;
+}
+
+section1 {
+ width: 100%;
+ height: 100vh;
+ display: flex;
+ justify-content: center;
+ flex-direction: column;
+ align-items: center;
+}
+
+section1 h1 {
+ /*text-shadow: 2px 5px 5px #2f3542;*/
+ word-spacing: 10px;
+ margin-bottom: 15px;
+ font-size: 2.5rem;
+ text-transform: uppercase;
+ letter-spacing: 2px;
+ color: #F8FFDB;
 }
 
 .centerDiv {
@@ -495,25 +513,10 @@ h1 {
   animation-duration: 5s;
 }
 
-.content {
-  background-color: rgba(255, 255, 255, .8);
-  border-radius: .25em;
-  box-shadow: 0 0 .25em rgba(0, 0, 0, .25);
-  box-sizing: border-box;
-  left: 50%;
-  padding: 10vmin;
-  position: fixed;
-  text-align: center;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
+
 
 h1 {
   font-family: monospace;
-}
-
-.transperant {
-  color: transparent;
 }
 
 @keyframes slide {
